--- a/src/index.scss
+++ b/src/index.scss
@@ -1,14 +1,16 @@
+@import 'styles/main';
+
+html {
+  height: 100%;
+  min-height: 100%;
+  background: $brown;
+  color: white;
+}
+
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  display: flex;
+  justify-content: center;
+  font-family: sans-serif;
 }
